Update slur ✔✔✔✔✔
