# route/index.js
@@ -1,10 +1,12 @@
 const express = require('express');
 const {
   getItems,
+  searchItems,
   postItems,
   putItems,
   deleteItems,
   getItemsType,
+  searchItemsType,
   postItemsType,
   putItemsType,
   deleteItemsType,
@@ -17,11 +19,13 @@ route.post('/register', register);
 route.post('/login', login);
 
 route.get('/items', getItems);
+route.get('/items/get', searchItems);
 route.post('/items', withAuth, postItems);
 route.put('/items/:id', withAuth, putItems);
 route.delete('/items/:id', withAuth, deleteItems);
 
 route.get('/items/type', getItemsType);
+route.get('/items/type/get', searchItemsType);
 route.post('/items/type', withAuth, postItemsType);
 route.put('/items/type/:id', withAuth, putItemsType);
 route.delete('/items/type/:id', withAuth, deleteItemsType);
